Setting up some sensible default config for the first time GS runs
For #24